# Lab3_ver_2

lab3_retry/: CMakeLists.txt  complex.h  dynamic-array.h  linked-list.h  main.cpp  square-matrix.h  ui.cpp  ui.h  vector.h
lab3_retry/Tests/: test-dynamic-array.cpp  test-dynamic-array.h  test-linked-list.cpp  test-linked-list.h  test-square-matrix.cpp  test-square-matrix.h  test-vector.cpp  test-vector.h
lab3_retry/fail/: icollection.h  test-icollection.cpp  test-icollection.h
lab3_retry/lab2_old/: immutable-array-sequence.h  immutable-list-sequence.h  immutable-sequence.h  mutable-array-sequence.h  mutable-list-sequence.h  mutable-sequence.h
lab3_retry/lab2_old/tests/: test-immutable-array-sequence.cpp  test-immutable-array-sequence.h  test-immutable-list-sequence.cpp  test-immutable-list-sequence.h  test-mutable-array-sequence.cpp  test-mutable-array-sequence.h  test-mutable-list-sequence.cpp  test-mutable-list-sequence.h
